--- a/release_notes.txt
+++ b/release_notes.txt
@@ -1,3 +1,8 @@
+New in 1.7.12
+    Many minor code improvements
+    Minor fixes for performance test
+    Now uses Spring 3.2.6
+
 New in 1.7.11
     Added greater precision when persisting float values
 
