--- a/release_notes.txt
+++ b/release_notes.txt
@@ -3,6 +3,7 @@ New in 1.8.0
     Minor fixes for performance test
     Now uses Spring 3.2.6
     Added `HierarchicalInfileObjectLoader#setIgnoredClasses`; deprecated `HierarchicalInfileObjectLoader#setClassesToIgnore`
+    Added more flexible events processing approach using Guava's EventBus
 
 New in 1.7.11
     Added greater precision when persisting float values
