Reintroduce protected connection field to InfileObjectLoader class. Deprecate all protected fields in InfileObjectLoader and SingleInfileObjectLoader classes. Introduce accessors/mutators for these fields. Access level modifiers for them is the same as for the fields. Extend new StatementCallback interface from old one. Minor changes to the Javadoc of ConnectionBasedStatementExecutor and DataSourceBasedStatementExecutor.

--- a/release_notes.txt
+++ b/release_notes.txt
@@ -1,4 +1,7 @@
-New in 1.8.0
+New in 1.8.1
+    Reintroduce and deprecate the API removed in 1.8.0 release
+
+New in 1.8.0 - this version breaks backwards compatibility and should not be used
     Many minor code improvements
     Minor fixes for performance test
     Now uses Spring 3.2.6
