Fix several design issues related to DataSourceBasedStatementExecutor class.
Guarantee that connections are closed.
Remove side-effect from constructor.
Lazily get connection before call to execute.
Suppress on-close exceptions within DataSourceBasedStatementExecutor

--- a/release_notes.txt
+++ b/release_notes.txt
@@ -1,3 +1,7 @@
+New in 1.8.2
+    Remove side-effect in constructor of `DataSourceBasedStatementExecutor`. Lazily initialize connection before call to `execute` method
+    FIXED possible connection leak in `DataSourceBasedStatementExecutor` class.
+
 New in 1.8.1
     Reintroduce and deprecate the API removed in 1.8.0 release
 
